Add campaign-service contract